# usethis-python

./: .gitignore  .importlinter  .markdownlint.yml  .pre-commit-config.yaml  .prettierrc.toml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  bitbucket-pipelines.yml  codecov.yaml  codecov.yml  mkdocs.yml  pyproject.toml  pyproject.toml.bak  requirements.txt  ruff.toml  skills-lock.json
.agents/skills/github-actions-update/: SKILL.md
.agents/skills/usethis-agents/: SKILL.md
.agents/skills/usethis-cli-dogfood/: SKILL.md
.agents/skills/usethis-cli-modify/: SKILL.md
.agents/skills/usethis-cli-user-test/: SKILL.md
.agents/skills/usethis-doc-edit/: SKILL.md
.agents/skills/usethis-file-create/: SKILL.md
.agents/skills/usethis-file-placement/: SKILL.md
.agents/skills/usethis-file-remove/: SKILL.md
.agents/skills/usethis-github-actions-update/: SKILL.md
.agents/skills/usethis-github-issue-create/: SKILL.md
.agents/skills/usethis-lesson-create/: SKILL.md
.agents/skills/usethis-pre-commit/: SKILL.md
.agents/skills/usethis-prek-add-hook/: SKILL.md
.agents/skills/usethis-prek-bespoke-hook/: SKILL.md
.agents/skills/usethis-prek-hook-bespoke-create/: SKILL.md
.agents/skills/usethis-python-code/: SKILL.md
.agents/skills/usethis-python-code-modify/: SKILL.md
.agents/skills/usethis-python-enum/: SKILL.md
.agents/skills/usethis-python-functions/: SKILL.md
.agents/skills/usethis-python-module-layout-modify/: SKILL.md
.agents/skills/usethis-python-ruff/: SKILL.md
.agents/skills/usethis-python-test/: SKILL.md
.agents/skills/usethis-python-test-affected-find/: SKILL.md
.agents/skills/usethis-python-test-full-coverage/: SKILL.md
.agents/skills/usethis-qa-config-files-sync/: SKILL.md
.agents/skills/usethis-qa-doc-freshness/: SKILL.md
.agents/skills/usethis-qa-doc-integrity/: SKILL.md
.agents/skills/usethis-qa-grammar/: SKILL.md
.agents/skills/usethis-qa-import-linter/: SKILL.md
.agents/skills/usethis-qa-llm-review/: SKILL.md
.agents/skills/usethis-qa-static-checks/: SKILL.md
.agents/skills/usethis-skills-create/: SKILL.md
.agents/skills/usethis-skills-external-add/: SKILL.md
.agents/skills/usethis-skills-external-install/: SKILL.md
.agents/skills/usethis-skills-modify/: SKILL.md
.agents/skills/usethis-test-with-coverage/: SKILL.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation-task.md  enhancement.md  feature-development-task.md  feature-idea.md  idea.md
.github/workflows/: bump-dev-dep.yml  ci.yml  codecov.yml  codeql.yml  codspeed.yml  copilot-setup-steps.yml  release.yml  static-checks.yml  test.yml  zizmor.yml
.requirements/: 3.12-Linux.txt  3.12-Windows.txt  3.12-linux.txt  3.12-macOS.txt  3.12-macos.txt  3.12-windows.txt
assets/badge/: v1.json
doc/: lessons.md  pipeweld.md  roundtrip.md
doc/philosophy/: introspection.md
docs/: README.md.jinja  agents-instructions.md  config-files.txt  example-usage.md  faq.md  file-manager.md  frameworks.md  functions.txt  getting-started.md  index.md  module-tree.txt  pipeweld.md  requirements.txt  similar-projects.md  skills-directory.txt
docs/about/: about-license.md  backends.md  config-files.md  faq.md  philosophy.md  similar-projects.md
docs/cli/: overview.md  reference.md
docs/start/: detailed-example.md  example-usage.md  installation.md
hooks/: check-agent-file-sizes.py  check-banned-words.py  check-comment-keywords.py  check-doc-sync.py  check-docstring-substrings.py  check-list-referenced.py  check-priority-monotone.py  check-skills-documented  check-skills-documented.py  check-test-skeleton.py  export-config-files.py  export-functions.py  export-module-tree.py  export-skills-directory.py  fix-doc-sync.py  fix-readme.py
src/: _test.py
src/usethis/: __init__.py  __main__.py  _app.py  _backend.py  _ci.py  _config.py  _config_file.py  _console.py  _deps.py  _fallback.py  _git.py  _github.py  _init.py  _io.py  _modules.py  _options.py  _subprocess.py  _test.py  _tool.py  _validate.py  _versions.py  _yaml.py  browse.py  ci.py  errors.py  tool.py
src/usethis/_backend/: __init__.py  dispatch.py
src/usethis/_bitbucket/: cache.py  config.py  steps.py
src/usethis/_core/: __init__.py  author.py  badge.py  browse.py  ci.py  docstyle.py  list.py  readme.py  rule.py  show.py  status.py  tool.py
src/usethis/_deptry/: core.py
src/usethis/_detect/: __init__.py  pre_commit.py  readme.py
src/usethis/_file/: __init__.py  dir.py  manager.py  merge.py  print_.py  types_.py  validate.py
src/usethis/_integrations/: __init__.py
src/usethis/_interface/: __init__.py  author.py  badge.py  browse.py  ci.py  doc.py  docstyle.py  format_.py  init.py  lint.py  list.py  readme.py  rule.py  show.py  spellcheck.py  status.py  test.py  tool.py  version.py
src/usethis/_pipeweld/: __init__.py  containers.py  func.py  ops.py  result.py
src/usethis/_pre_commit/: config.py  core.py  hooks.py
src/usethis/_pyproject/: config.py  core.py  requires_python.py
src/usethis/_pytest/: core.py
src/usethis/_python/: __init__.py  version.py
src/usethis/_ruff/: core.py  rules.py
src/usethis/_tool/: __init__.py  all_.py  base.py  config.py  deps.py  heuristics.py  pre_commit.py  rule.py  spec.py
src/usethis/_toolset/: __init__.py  arch.py  doc.py  format_.py  hook.py  lint.py  spellcheck.py  test.py  typecheck.py
src/usethis/_types/: __init__.py  backend.py  build_backend.py  ci.py  config_format.py  deps.py  docstyle.py  status.py
src/usethis/_ui/: __init__.py  app.py  options.py  ruff.toml
src/usethis/_utils/: _test.py
tests/: conftest.py  ruff.toml  test__test.py  test_help.py  test_install.py  test_suite.py
tests/docs/: test_readme.py
tests/hooks/: test_export_functions.py
tests/usethis/: test_backend.py  test_browse.py  test_ci.py  test_config.py  test_console.py  test_deps.py  test_fallback.py  test_github.py  test_init.py  test_io.py  test_pre_commit.py  test_tool.py  test_usethis_tool.py  test_uv.py  test_validate.py  test_versions.py
(+497 files in other folders)
