[build-system]
build-backend = "hatchling.build"

requires = [
  "hatch-vcs>=0.5.0,<0.6.0",
  "hatchling>=1.27.0,<1.28.0",
]

[project]
name = "usethis"
description = "Automatically manage Python tooling and configuration: linters, formatters, and more. A CLI for declaratively configuring your Python projects following best practices."
readme = "README.md"
keywords = [
  "config",
  "configuration",
  "init",
  "linting",
  "project",
  "setup",
  "start",
  "templating",
  "tool",
  "tooling",
  "tools",
  "usethis",
]
license = { file = "LICENSE" }
authors = [
  { name = "Nathan McDougall", email = "nathan.j.mcdougall@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dynamic = [
  "urls",
  "version",
]
dependencies = [
  "configupdater>=3.2",
  "grimp>=3.14",
  "identify[license]>=2.6",
  "packaging>=20.9",
  "pydantic>=2.5.0",
  "requests>=2.26.0",
  "rich>=9.6.1",
  "ruamel-yaml>=0.16.13,!=0.18.13,!=0.18.14,!=0.18.15,!=0.18.16,!=0.18.17,!=0.19.0,!=0.19.1",
  "tomlkit>=0.13.3",
  "typer>=0.12.4",
  "typing-extensions>=3.10.0.0",
]
scripts.usethis = "usethis.__main__:app"

[dependency-groups]
dev = [
  "basedpyright>=1.36.2",
  "codespell>=2.4.1",
  "datamodel-code-generator[http]>=0.35.0",
  "deptry>=0.23.0",
  "import-linter>=2.11",
  "jinja2>=3.1.6",
  "prek>=0.3.8",
  "pyinstrument>=5.1.1",
  "pyproject-fmt>=2.11.1",
  "ruff>=0.14.3",
  "ty>=0.0.1a25",
  "validate-pyproject>=0.24.1",
]
test = [
  "click>=8.1.8",
  "coverage[toml]>=7.7.1",
  "gitpython>=3.1.44",
  "poetry>=2.3.2",
  "pytest>=8.3.5",
  "pytest-codspeed>=3.2.0",
  "pytest-cov>=6.0.0",
  "pytest-md>=0.2.0",
  "pytest-sugar>=1.1.1",
]
doc = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.0",
]
uv = [
  "uv>=0.9.9",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "ruff.toml",
]

[tool.hatch.metadata.hooks.vcs.urls]
"Source Code" = "https://github.com/usethis-python/usethis-python"
"Documentation" = "https://usethis.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/usethis-python/usethis-python/issues"
"Releases" = "https://github.com/usethis-python/usethis-python/releases"
"Source Archive" = "https://github.com/usethis-python/usethis-python/archive/{commit_hash}.zip"

[tool.hatch.build.hooks.vcs]
version-file = "src/usethis/_version.py"

[tool.uv]
required-version = ">=0.9.9"              # Sync with README
default-groups = [ "test", "dev", "doc" ]
link-mode = "symlink"

[tool.codespell]
skip = [ "site" ]
ignore-words-list = [ "edn" ]

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest.ini_options]
testpaths = [ "tests", "src" ]
addopts = [
  "--import-mode=importlib",
  "-ra",
  "--showlocals",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
filterwarnings = [ "error" ]
xfail_strict = true
log_cli_level = "INFO"
minversion = "7"

[tool.coverage.run]
relative_files = true
source = [ "src" ]
omit = [ "*/pytest-of-*/*", "*/_temp/*" ]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "msg = [\"']",
  "assert_never(.*)",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
omit = [ "*/pytest-of-*/*", "*/_temp/*" ]

[tool.ty]
environment.python-platform = "all"
rules.type-assertion-failure = "ignore"

[[tool.ty.overrides]]
include = [ "src/usethis/_file/**" ]
rules.invalid-argument-type = "ignore"
rules.invalid-return-type = "ignore"
rules.invalid-assignment = "ignore"
rules.possibly-missing-attribute = "ignore"

[tool.basedpyright]
ignore = [ "src/usethis/_version.py" ]
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUnusedCallResult = false

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportUnreachable = false
reportUnusedFunction = false
reportUnusedParameter = false

[[tool.basedpyright.executionEnvironments]]
# Particularly interested in avoiding the auto-generated schema script
root = "src/usethis/_integrations/pre_commit"
reportMissingTypeArgument = false
reportUnannotatedClassAttribute = false

[tool.sync-with-uv.repo-to-package]
"https://github.com/astral-sh/uv-pre-commit" = "uv"
